[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Network.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="UsernameText" type="LineEdit" parent="."]
margin_left = 145.0
margin_top = 125.0
margin_right = 611.0
margin_bottom = 177.0

[node name="PasswordText" type="LineEdit" parent="."]
margin_left = 145.0
margin_top = 225.0
margin_right = 611.0
margin_bottom = 277.0

[node name="UsernameLabel" type="Label" parent="."]
margin_left = 57.0
margin_top = 150.0
margin_right = 127.0
margin_bottom = 164.0
text = "Username:"

[node name="PasswordLabel" type="Label" parent="."]
margin_left = 61.0
margin_top = 243.0
margin_right = 131.0
margin_bottom = 257.0
text = "Password"

[node name="LoginButton" type="Button" parent="."]
margin_left = 176.0
margin_top = 354.0
margin_right = 402.0
margin_bottom = 440.0
text = "Login"

[node name="CreateMatchButton" type="Button" parent="."]
visible = false
margin_left = 459.0
margin_top = 351.0
margin_right = 768.0
margin_bottom = 444.0
text = "Create match"

[node name="Label" type="Label" parent="."]
margin_left = 257.0
margin_top = 53.0
margin_right = 424.0
margin_bottom = 96.0

[node name="JoinMatch" type="Button" parent="."]
visible = false
margin_left = 745.0
margin_top = 357.0
margin_right = 936.0
margin_bottom = 429.0
text = "JoinMatch"

[node name="EnterMatchID" type="LineEdit" parent="."]
margin_left = 171.0
margin_top = 53.0
margin_right = 528.0
margin_bottom = 95.0
text = "Enter Match ID"

[node name="gotoscene" type="Button" parent="."]
margin_left = 25.0
margin_top = 462.0
margin_right = 122.0
margin_bottom = 531.0
text = "goto"

[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="CreateMatchButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="JoinMatch" to="." method="_on_JoinMatch_pressed"]
[connection signal="pressed" from="gotoscene" to="." method="_on_gotoscene_pressed"]
